<resources>
    <string name="app_name">Volunteer</string>
    <string name="login">Sign In</string>
    <string name="submit">Login</string>
    <string name="error_while_login_in">Error while login in</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="fetch_user">Fetch user</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="go_back_to_login_page">Go back to Login page</string>
    <string name="show_hide">Show/hide</string>
    <string name="show_password">Show password</string>
    <string name="Show">Show</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home Page</string>
    <string name="title_activity_profile">profile_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="animals">Animals</string>
    <string name="medicine">Medicine</string>
    <string name="food">Food</string>
    <string name="nature">Nature</string>
    <string name="children">Children</string>
    <string name="logout_menuside">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="categories">Categories</string>

    <string-array name="PostCategory">
        <item>Animals</item>
        <item>Medicine</item>
        <item>Food</item>
        <item>Nature</item>
        <item>Children</item>
    </string-array>

    <string-array name="PostState">
        <item>New</item>
        <item>In Progress</item>
        <item>Finished</item>
    </string-array>
    <string name="title_activity_tryto_upload_photo">TrytoUploadPhotoActivity</string>
</resources>