<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_view"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <View
        android:id="@+id/wave_profile"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_gravity="start"
        android:layout_marginTop="0dp"
        android:background="@drawable/wave" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:background="#00000000"
        android:padding="5dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:padding="5dp"
        android:background="#00000000"
        android:text="@string/email"
        android:textAlignment="center"
        />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:elevation="3dp"
        android:visibility="visible"
        tools:src="@drawable/blankprofilepic" />

        <LinearLayout
            android:id="@+id/main_profile_info"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/email"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="150dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:id="@+id/reviews"
                android:layout_width="117dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/profile_info_1_background">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="Reviews"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="117dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/posts_info"
                android:clickable="true"
                android:background="@drawable/profile_info_2_background">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="Posts"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="15dp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_personal_info"
                android:layout_width="117dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/profile_info_3_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="Profile Info"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/wave_profile"
        android:layout_marginTop="30dp"
        android:background="@drawable/profile_bottom_background_image">

        <Button
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/profile_personal_info"
            android:id="@+id/logout"
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:backgroundTint="@color/light_blue"
            android:textColor="@color/white"
            />

    </LinearLayout>

</RelativeLayout>
